# DnD-Character-Manager

./: .gitignore  CMakeLists.txt  DnD-C++.pro  README  classList  raceList  skillList
Core/: CMakeLists.txt  characterAttribute.h  classList.cpp  skillList.cpp
Qt/: CMakeLists.txt  application_qt.cpp  application_qt.h  attributesWidget.h  characterSkill.h  classSelector.cpp  mainwidget.cpp  selectorWidget.h  skillsWidget.h
Win32/: CMakeLists.txt  application_win32.cpp  application_win32.h
include/: application.h  application_qt.h  attributesWidget.h  character.h  characterAttribute.h  characterSkill.h  classList.h  classSelector.h  mainwidget.h  raceList.h  selectorWidget.h  skillList.h  skillsWidget.h
source/: application_qt.cpp  attributesWidget.cpp  character.cpp  characterAttribute.cpp  characterSkill.cpp  classList.cpp  classSelector.cpp  main.cpp  mainwidget.cpp  raceList.cpp  selectorWidget.cpp  skillList.cpp  skillsWidget.cpp
